# Palette-Director

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
cmake/: CPackOptions.cmake.in  NSIS.template.in
doc/config/: httpd.mod-palette-director.conf  workers.csv
doc/installer/: BACKGROUNDER_BINDING_INSTALLATION.md  HOWTO.md  INSTALL.md  LICENSE.txt  README.txt  WELCOME.txt  WORKER_BINDING_INSTALL.md
libs/libhttpd/: BaseAddr.ref
libs/libhttpd/win32/: httpd.aps  httpd.rc
nsis/: NSIS.InstallOptions.Apache.ini
src/: config-loader.c  config-loader.h  mod_lbmethod_bybusyness.c  palette-director-types.c  palette-director-types.h  palette-macros.h  status-pages.c  status-pages.h
src/win/: inet_ntop.c
test/: authoringbinding.csv  director_httpd.conf  workerbinding.csv
